--- a/config.json
+++ b/config.json
@@ -9,6 +9,7 @@
         "node_modules/bourbon-neat/app/assets/stylesheets"
     ],
     "cssVendor": [
-        "node_modules/normalize.css/normalize.css"
+        "node_modules/normalize.css/normalize.css",
+        "src/css/bootstrap.min.css"
     ]
 }
