--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "bourbon": "^4.2.6",
     "bourbon-neat": "^1.7.2",
     "debug": "^2.2.0",
+    "fixy": "^1.0.0",
     "gsap": "^1.18.2",
     "ismobilejs": "^0.3.9",
     "normalize.css": "^3.0.3",
